k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
  labels:
    app: edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-service
  template:
    metadata:
      labels:
        app: edge-service
      annotations:
        prometheus.io/scrape: "true" # 프로메테우스에게 이 파드에 있는 컨테이너로 부터 데이터를 가져와야함을 알림
        prometheus.io/path: /actuator/prometheus # 메트릭 Http 엔드포인트
        prometheus.io/port: "9000" # 메트릭 엔드포인트 포트
    spec:
      containers:
        - name: edge-service
          image: edge-service
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
              httpGet:
                path: /actuator/health/readiness
                port: 9000
              initialDelaySeconds: 5
              periodSeconds: 15
